--- a/my_app/package.json
+++ b/my_app/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-web-apis/geolocation": "^2.0.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
+    "mongoose": "^7.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
