--- a/my_app/package.json
+++ b/my_app/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.3",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
